# osgpango

./: CMakeLists.txt  ProjectHome.md  README  README.md  README.rst  TODO
applications/osgpango-gr-cache/: CMakeLists.txt  osgpango-gr-cache.cpp
etc/: FindPangoCairo.cmake  FindWin32GTKBundle.cmake  architecture.txt  screenshots.sh  test.sh  win32-build-helper
examples/osgpangoanimation/: CMakeLists.txt  osgpangoanimation.cpp
examples/osgpangoanimtk/: osgpangoanimtk.cpp
examples/osgpangocomplexrenderer/: osgpangocomplexrenderer.cpp
examples/osgpangocustomrenderer/: CMakeLists.txt  osgpangocustomrenderer.cpp
examples/osgpangodistancefield/: osgpangodistancefield.cpp
examples/osgpangofonts/: CMakeLists.txt  osgpangofonts.cpp
examples/osgpangoglsl/: osgpangoglsl.cpp
examples/osgpangoguiviewer/: CMakeLists.txt  osgpangoguiviewer.cpp
examples/osgpangomultitext/: CMakeLists.txt  osgpangomultitext.cpp
examples/osgpangosimplerenderer/: CMakeLists.txt  osgpangosimplerenderer.cpp
examples/osgpangotest/: CMakeLists.txt  osgpangotest.cpp  osgpangotest.glsl
examples/osgpangothreaded/: CMakeLists.txt
examples/osgpangoupdatecb/: CMakeLists.txt  osgpangoupdatecb.cpp
examples/osgpangovertical/: CMakeLists.txt  osgpangovertical.cpp
examples/osgpangoviewer/: CMakeLists.txt  osgPango-frag1-ATI.glsl  osgpangoviewer.cpp
include/osgPango/: Context  Export  Font  GeometryStatePolicy  Glyph  GlyphLayer  GlyphLayerInterface  GlyphRenderer  Input  Label  Layout  MultiText  Serialize  ShaderGenerator  String  Text  TextOSGInterface  TextTransform  Util  Version
src/: Context.cpp  DistanceFieldText.cpp  Font.cpp  GeometryStatePolicy.cpp  Glyph.cpp  GlyphLayer.cpp  GlyphLayerInterface.cpp  GlyphRenderer.cpp  Label.cpp  Layout.cpp  MultiText.cpp  ShaderGenerator.cpp  ShaderManager.cpp  Text.cpp  TextTransform.cpp  Util.cpp  VerticalText.cpp
src/layers/: Bevel.cpp  DistanceField.cpp  Emboss.cpp  FaceBitmap.cpp  Shadow.cpp  ShadowInset.cpp
src/renderers/: Default.cpp  DistanceField.cpp  Outline.cpp  Shadow.cpp  ShadowBlur.cpp  ShadowInset.cpp
src/serializers/: Glyph.cpp  GlyphLayerInterface.cpp  GlyphRenderer.cpp  GlyphRendererDefault.cpp  LibraryWrapper.cpp
src/serializers/renderers/: Outline.cpp  Shadow.cpp
tags/1.0.0/: AUTHORS
tags/1.0.0/etc/: Doxyfile  test.sh  win32-build-helper
tags/1.0.0/examples/osgpangoanimation/: CMakeLists.txt  osgpangoanimation.cpp
tags/1.0.0/examples/osgpangocomplexrenderer/: CMakeLists.txt  osgpangocomplexrenderer.cpp
tags/1.0.0/examples/osgpangoglsl/: CMakeLists.txt
tags/1.0.0/examples/osgpangoguiviewer/: CMakeLists.txt
tags/1.0.0/examples/osgpangosimplerenderer/: osgpangosimplerenderer.cpp
tags/1.0.0/examples/osgpangothreaded/: CMakeLists.txt
tags/1.0.0/examples/osgpangoupdatecb/: CMakeLists.txt
tags/1.0.0/examples/osgpangoviewer/: osgPango-frag2-ATI.glsl  osgpangoviewer.cpp
tags/1.0.0/include/osgPango/: Export  GlyphRenderer  ShaderGenerator  ShaderManager  String  Util
tags/1.0.0/src/: Context.cpp  GlyphLayer.cpp  GlyphRenderer.cpp  ShaderManager.cpp  Util.cpp
tags/1.0.0/src/layers/: Bitmap.cpp  Shadow.cpp  ShadowInset.cpp
tags/1.0.0/src/renderers/: Shadow.cpp  ShadowBlur.cpp
trunk/: AUTHORS  CMakeLists.txt  README  TODO
trunk/applications/osgpango-gr-cache/: osgpango-gr-cache.cpp
trunk/etc/: FindGLib.cmake  FindOpenSceneGraph.cmake  FindOsgCairo.cmake  FindPango.cmake  FindWin32GTKBundle.cmake  architecture.txt  screenshots.sh
trunk/examples/osgpangoanimation/: CMakeLists.txt  osgpangoanimation.cpp
trunk/examples/osgpangoanimtk/: CMakeLists.txt  osgpangoanimtk.cpp
trunk/examples/osgpangocomplexrenderer/: CMakeLists.txt  osgpangocomplexrenderer.cpp
trunk/examples/osgpangocustomrenderer/: CMakeLists.txt  osgpangocustomrenderer.cpp
trunk/examples/osgpangodistancefield/: CMakeLists.txt  osgpangodistancefield.cpp
trunk/examples/osgpangofonts/: CMakeLists.txt  osgpangofonts.cpp
trunk/examples/osgpangoglsl/: CMakeLists.txt  osgpangoglsl.cpp
trunk/examples/osgpangoguiviewer/: CMakeLists.txt  osgpangoguiviewer.cpp
trunk/examples/osgpangomultitext/: osgpangomultitext.cpp
trunk/examples/osgpangosimplerenderer/: CMakeLists.txt  osgpangosimplerenderer.cpp
trunk/examples/osgpangotest/: CMakeLists.txt  osgpangotest.cpp  osgpangotest.glsl
trunk/examples/osgpangothreaded/: osgpangothreaded.cpp
trunk/examples/osgpangoupdatecb/: CMakeLists.txt  osgpangoupdatecb.cpp
trunk/examples/osgpangoviewer/: CMakeLists.txt  osgPango-frag1-ATI.glsl  osgPango-frag2-ATI.glsl  osgpangoviewer.cpp
trunk/include/osgPango/: Context  DistanceFieldText  Export  Font  GeometryStatePolicy  Glyph  GlyphLayer  GlyphLayerInterface  GlyphRenderer  Label  Layout  MultiText  ShaderGenerator  ShaderManager  String  Text  TextTransform  Util  Version  VerticalText
trunk/src/: Context.cpp  DistanceFieldText.cpp  Font.cpp  GeometryStatePolicy.cpp  Glyph.cpp  GlyphLayer.cpp  GlyphLayerInterface.cpp  GlyphRenderer.cpp  Label.cpp  Layout.cpp  MultiText.cpp  ShaderGenerator.cpp  ShaderManager.cpp  Text.cpp  TextTransform.cpp  Util.cpp
trunk/src/layers/: Bevel.cpp  Bitmap.cpp  DistanceField.cpp  FaceBitmap.cpp  Outline.cpp  ShadowBlur.cpp  ShadowInset.cpp
trunk/src/renderers/: Default.cpp  DistanceField.cpp  Emboss.cpp  Outline.cpp  Shadow.cpp  ShadowBlur.cpp  ShadowInset.cpp
trunk/src/serializers/: Glyph.cpp  GlyphRenderer.cpp
