PROJECT(osgPango)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/etc/")

# On GCC, we need to set these compiler flags.
IF(NOT WIN32)
	SET(CMAKE_CXX_FLAGS "-W -Wall -Wno-unused")
ENDIF(NOT WIN32)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(CAIRO REQUIRED cairo)
PKG_CHECK_MODULES(PANGO REQUIRED pango)
PKG_CHECK_MODULES(PANGOCAIRO REQUIRED pangocairo)

SET(SRC_FILES
	src/Glyph.cpp
	src/Font.cpp
	src/Text.cpp
)

SET(HEADER_FILES
	${osgPango_SOURCE_DIR}/include/osgPango/Glyph
	${osgPango_SOURCE_DIR}/include/osgPango/Font
	${osgPango_SOURCE_DIR}/include/osgPango/Text
	${osgPango_SOURCE_DIR}/include/osgPango/String
	${osgPango_SOURCE_DIR}/include/osgPango/Util
)

FIND_PACKAGE(OpenSceneGraph)

INCLUDE_DIRECTORIES(include
	${OPENSCENEGRAPH_INCLUDE_DIR}
	${CAIRO_INCLUDE_DIRS}
	${PANGO_INCLUDE_DIRS}
	${PANGOCAIRO_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
	${OPENSCENEGRAPH_LIB_DIR}
	${CAIRO_LIBRARY_DIRS}
	${PANGO_LIBRARY_DIRS}
	${PANGOCAIRO_LIBRARY_DIRS}
)

LINK_LIBRARIES(osg osgUtil osgViewer osgCairo osgWidget pango-1.0 pangocairo-1.0)

ADD_LIBRARY(osgPango SHARED ${SRC_FILES} ${HEADER_FILES})

INSTALL(TARGETS osgPango DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

FOREACH(INCLUDEFILE ${HEADER_FILES})
	FILE(RELATIVE_PATH REL_INCLUDEFILE ${osgPango_SOURCE_DIR}/include/osgPango ${INCLUDEFILE})
	GET_FILENAME_COMPONENT(REL_INCLUDE_PATH ${REL_INCLUDEFILE} PATH)
	INSTALL(
		FILES ${INCLUDEFILE}
		DESTINATION ${CMAKE_INSTALL_PREFIX}/include/osgPango/${REL_INCLUDE_PATH}
	)
ENDFOREACH(INCLUDEFILE)

ADD_SUBDIRECTORY(examples/osgpangoanimtk)
ADD_SUBDIRECTORY(examples/osgpangocustomrenderer)
ADD_SUBDIRECTORY(examples/osgpangofonts)
ADD_SUBDIRECTORY(examples/osgpangoviewer)

CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/etc/uninstall.cmake"
	"${CMAKE_CURRENT_BINARY_DIR}/uninstall.cmake"
	IMMEDIATE @ONLY
)

ADD_CUSTOM_TARGET(uninstall
	"${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/uninstall.cmake"
)

# Packaging information.
SET(CPACK_GENERATOR TGZ)
SET(CPACK_SOURCE_GENERATOR TGZ)
SET(CPACK_SOURCE_IGNORE_FILES
	"~$"
	".*.svn"
	".*build/"
	".*debug/"
	".*release/"
)

SET(OSGPANGO_VERSION "0.0.1")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "osgPango-${OSGPANGO_VERSION}")

INCLUDE(CPack)
